adding apply and move operations on Ship